# yolo_pose_detect

./: CMakeLists.txt  LICENSE  README.md
data/model/best_openvino_model/: best.xml  metadata.yaml
include/: exchange_box.h
src/: main.cpp
